--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1082,6 +1082,9 @@
     <ClCompile Include="src\enclayoutstackhooks.cpp">
       <Filter>hooks</Filter>
     </ClCompile>
+    <ClCompile Include="src\enclayoutruin.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
     <ClCompile Include="src\enclayoutcity.cpp">
       <Filter>game</Filter>
     </ClCompile>
@@ -2721,6 +2724,9 @@
     </ClInclude>
     <ClInclude Include="include\enclayoutstackhooks.h">
       <Filter>hooks</Filter>
+    </ClInclude>
+    <ClInclude Include="include\enclayoutruin.h">
+      <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="include\enclayoutcity.h">
       <Filter>game</Filter>
