--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1085,6 +1085,12 @@
     <ClCompile Include="src\enclayoutruin.cpp">
       <Filter>game</Filter>
     </ClCompile>
+    <ClCompile Include="src\enclayoutruinhooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
+    <ClCompile Include="src\enclayoutcityhooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
     <ClCompile Include="src\enclayoutcity.cpp">
       <Filter>game</Filter>
     </ClCompile>
@@ -2727,6 +2733,12 @@
     </ClInclude>
     <ClInclude Include="include\enclayoutruin.h">
       <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\enclayoutruinhooks.h">
+      <Filter>hooks</Filter>
+    </ClInclude>
+    <ClInclude Include="include\enclayoutcityhooks.h">
+      <Filter>hooks</Filter>
     </ClInclude>
     <ClInclude Include="include\enclayoutcity.h">
       <Filter>game</Filter>
