--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2740,6 +2740,9 @@
     <ClInclude Include="include\enclayoutcity.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\midrod.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
