Add rod to lua api

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -200,6 +200,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\bindings\modifierview.cpp" />
     <ClCompile Include="src\bindings\playerview.cpp" />
     <ClCompile Include="src\bindings\point.cpp" />
+    <ClCompile Include="src\bindings\rodview.cpp" />
     <ClCompile Include="src\bindings\ruinview.cpp" />
     <ClCompile Include="src\bindings\scenariovariableview.cpp" />
     <ClCompile Include="src\bindings\scenarioview.cpp" />
@@ -562,6 +563,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\bindings\modifierview.h" />
     <ClInclude Include="include\bindings\playerview.h" />
     <ClInclude Include="include\bindings\point.h" />
+    <ClInclude Include="include\bindings\rodview.h" />
     <ClInclude Include="include\bindings\ruinview.h" />
     <ClInclude Include="include\bindings\scenariovariableview.h" />
     <ClInclude Include="include\bindings\scenarioview.h" />
