--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -540,6 +540,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\batattacktransformother.h" />
     <ClInclude Include="include\batattacktransformself.h" />
     <ClInclude Include="include\batattackuntransformeffect.h" />
+    <ClInclude Include="include\batattackusepotion.h" />
     <ClInclude Include="include\batattackutils.h" />
     <ClInclude Include="include\batbigface.h" />
     <ClInclude Include="include\batimagesloader.h" />
