--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -535,6 +535,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\batattackdrainlevel.h" />
     <ClInclude Include="include\batattackdrainoverflow.h" />
     <ClInclude Include="include\batattackgiveattack.h" />
+    <ClInclude Include="include\batattackitem.h" />
     <ClInclude Include="include\batattackshatter.h" />
     <ClInclude Include="include\batattacksummon.h" />
     <ClInclude Include="include\batattacktransformother.h" />
