--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2761,6 +2761,9 @@
     <ClInclude Include="include\bindings\unitviewbase.h">
       <Filter>bindings</Filter>
     </ClInclude>
+    <ClInclude Include="include\batattackitem.h">
+      <Filter>game</Filter>
+    </ClInclude>
     <ClInclude Include="include\batattackusepotion.h">
       <Filter>game</Filter>
     </ClInclude>
