--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -543,6 +543,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\batattackuntransformeffect.h" />
     <ClInclude Include="include\batattackuseorb.h" />
     <ClInclude Include="include\batattackusepotion.h" />
+    <ClInclude Include="include\batattackusetalisman.h" />
     <ClInclude Include="include\batattackutils.h" />
     <ClInclude Include="include\batbigface.h" />
     <ClInclude Include="include\batimagesloader.h" />
