--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -634,6 +634,8 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\interfborderdisplay.h" />
     <ClInclude Include="include\interfaceutils.h" />
     <ClInclude Include="include\leaderunitdescriptor.h" />
+    <ClInclude Include="include\midanim2.h" />
+    <ClInclude Include="include\midanim2base.h" />
     <ClInclude Include="include\midobjectlock.h" />
     <ClInclude Include="include\midrod.h" />
     <ClInclude Include="include\scenedit.h" />
