--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2776,6 +2776,12 @@
     <ClInclude Include="include\midobjectlock.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\midanim2.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\midanim2base.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
