--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -637,6 +637,8 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midanim2.h" />
     <ClInclude Include="include\midanim2base.h" />
     <ClInclude Include="include\midanim2system.h" />
+    <ClInclude Include="include\middropsource.h" />
+    <ClInclude Include="include\middropsourceext.h" />
     <ClInclude Include="include\midobjectlock.h" />
     <ClInclude Include="include\midrod.h" />
     <ClInclude Include="include\scenedit.h" />
