--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2800,6 +2800,9 @@
     <ClInclude Include="include\midunitext.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\groupareamanagement.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
