--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -644,6 +644,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midobjectlock.h" />
     <ClInclude Include="include\midrod.h" />
     <ClInclude Include="include\midunitext.h" />
+    <ClInclude Include="include\midunitgroupadapter.h" />
     <ClInclude Include="include\scenedit.h" />
     <ClInclude Include="include\isoborder.h" />
     <ClInclude Include="include\isoenginegroundhooks.h" />
