--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -515,6 +515,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\2denginemap.h" />
     <ClInclude Include="include\2denginemapimpl.h" />
     <ClInclude Include="include\aipriority.h" />
+    <ClInclude Include="include\aireaction.h" />
     <ClInclude Include="include\aispellcat.h" />
     <ClInclude Include="include\animations.h" />
     <ClInclude Include="include\attack.h" />
