--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2830,6 +2830,9 @@
     <ClInclude Include="include\midserverlogichooks.h">
       <Filter>hooks</Filter>
     </ClInclude>
+    <ClInclude Include="include\aireaction.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
