--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2830,7 +2830,16 @@
     <ClInclude Include="include\midserverlogichooks.h">
       <Filter>hooks</Filter>
     </ClInclude>
+    <ClInclude Include="include\aireactionoper.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\aireactionnull.h">
+      <Filter>game</Filter>
+    </ClInclude>
     <ClInclude Include="include\aireaction.h">
+      <Filter>game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\aireactionstrat.h">
       <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
