Add CAiOperational structure

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -514,6 +514,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\2dengine.h" />
     <ClInclude Include="include\2denginemap.h" />
     <ClInclude Include="include\2denginemapimpl.h" />
+    <ClInclude Include="include\aioperational.h" />
     <ClInclude Include="include\aipriority.h" />
     <ClInclude Include="include\aireaction.h" />
     <ClInclude Include="include\aireactionnull.h" />
