--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2833,6 +2833,9 @@
     <ClInclude Include="include\aistate.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\aistrategic.h">
+      <Filter>game</Filter>
+    </ClInclude>
     <ClInclude Include="include\aioperational.h">
       <Filter>game</Filter>
     </ClInclude>
