--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -525,6 +525,8 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\aistate.h" />
     <ClInclude Include="include\aistrategic.h" />
     <ClInclude Include="include\aistratplayer.h" />
+    <ClInclude Include="include\aistratplayerneutral.h" />
+    <ClInclude Include="include\aistratplayerrace.h" />
     <ClInclude Include="include\aitactic.h" />
     <ClInclude Include="include\animations.h" />
     <ClInclude Include="include\attack.h" />
