--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2890,6 +2890,9 @@
     <ClInclude Include="include\refreshinfo.h">
       <Filter>game</Filter>
     </ClInclude>
+    <ClInclude Include="include\encparamidplayer.h">
+      <Filter>game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="mss32.rc">
