--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -223,6 +223,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\enclayoutruinhooks.cpp" />
     <ClCompile Include="src\enclayoutstackhooks.cpp" />
     <ClCompile Include="src\encparambase.cpp" />
+    <ClCompile Include="src\encparambasehooks.cpp" />
     <ClCompile Include="src\intvector.cpp" />
     <ClCompile Include="src\button.cpp" />
     <ClCompile Include="src\campaignstream.cpp" />
@@ -614,6 +615,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\enclayoutruin.h" />
     <ClInclude Include="include\enclayoutruinhooks.h" />
     <ClInclude Include="include\encparamidplayer.h" />
+    <ClInclude Include="include\encparambasehooks.h" />
     <ClInclude Include="include\groupareamanagement.h" />
     <ClInclude Include="include\intvector.h" />
     <ClInclude Include="include\button.h" />
