--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -271,6 +271,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\midgardscenariomap.cpp" />
     <ClCompile Include="src\midserver.cpp" />
     <ClCompile Include="src\midserverlogichooks.cpp" />
+    <ClCompile Include="src\netsingleplayer.cpp" />
     <ClCompile Include="src\refreshinfo.cpp" />
     <ClCompile Include="src\scenedit.cpp" />
     <ClCompile Include="src\effectinterf.cpp" />
@@ -672,6 +673,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midserverlogichooks.h" />
     <ClInclude Include="include\midunitext.h" />
     <ClInclude Include="include\midunitgroupadapter.h" />
+    <ClInclude Include="include\netsingleplayer.h" />
     <ClInclude Include="include\refreshinfo.h" />
     <ClInclude Include="include\scenedit.h" />
     <ClInclude Include="include\isoborder.h" />
