--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1127,6 +1127,9 @@
     <ClCompile Include="src\encparambasehooks.cpp">
       <Filter>hooks</Filter>
     </ClCompile>
+    <ClCompile Include="src\netsingleplayerhooks.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2897,6 +2900,9 @@
       <Filter>game</Filter>
     </ClInclude>
     <ClInclude Include="include\encparambasehooks.h">
+      <Filter>hooks</Filter>
+    </ClInclude>
+    <ClInclude Include="include\netsingleplayerhooks.h">
       <Filter>hooks</Filter>
     </ClInclude>
   </ItemGroup>
