--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1127,8 +1127,14 @@
     <ClCompile Include="src\encparambasehooks.cpp">
       <Filter>hooks</Filter>
     </ClCompile>
+    <ClCompile Include="src\netsingleplayer.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
     <ClCompile Include="src\netsingleplayerhooks.cpp">
       <Filter>hooks</Filter>
+    </ClCompile>
+    <ClCompile Include="src\logutils.cpp">
+      <Filter>utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -2902,8 +2908,14 @@
     <ClInclude Include="include\encparambasehooks.h">
       <Filter>hooks</Filter>
     </ClInclude>
+    <ClInclude Include="include\netsingleplayer.h">
+      <Filter>game</Filter>
+    </ClInclude>
     <ClInclude Include="include\netsingleplayerhooks.h">
       <Filter>hooks</Filter>
+    </ClInclude>
+    <ClInclude Include="include\logutils.h">
+      <Filter>utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
