Add scenario generator submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = SLikeNet
 	url = https://github.com/VladimirMakeev/SLikeNet.git
 	branch = disciples2-lobby
+[submodule "D2RSG"]
+	path = D2RSG
+	url = https://github.com/VladimirMakeev/D2RSG.git
+	branch = master
